plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '7.0.0'
}

group 'nl.dannyjelsma'
version '1.0-SNAPSHOT'

sourceCompatibility = "11"

application {
    mainClass = "nl.dannyjelsma.cloudencrypt.CloudEncrypt"
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'commons-io:commons-io:2.11.0'
    implementation 'com.dropbox.core:dropbox-core-sdk:4.0.1'
    implementation 'com.goterl:lazysodium-java:5.1.1'
    implementation 'net.java.dev.jna:jna:5.9.0'
    implementation 'org.apache.logging.log4j:log4j-api:2.14.1'
    implementation 'org.apache.logging.log4j:log4j-core:2.14.1'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.14.1'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5'
}

test {

}

run {
    standardInput = System.in
}